--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -948,7 +949,7 @@ with a focus on accuracy, integrity, and continuous professional growth.</p>
         <div class="timeline">
             <div class="timeline-item visible">
                 <div class="timeline-content">
-                    <div class="timeline-date">August 2023 - December 2023</div>
+                    <div class="timeline-date">August 2024 - December 2024</div>
                     <div class="timeline-duration" id="internDuration"></div>
                     <h3 class="timeline-title">Accounting Intern</h3>
                     <p>Arun Securities Pvt. Ltd, Kathmandu</p>
@@ -960,7 +961,7 @@ with a focus on accuracy, integrity, and continuous professional growth.</p>
             </div>
             <div class="timeline-item visible">
                 <div class="timeline-content">
-                    <div class="timeline-date">January 2024 - Present</div>
+                    <div class="timeline-date">January 2025 - Present</div>
                     <div class="timeline-duration" id="officerDuration"></div>
                     <h3 class="timeline-title">Accounts Officer</h3>
                     <p>Arun Securities Pvt. Ltd, Kathmandu</p>
@@ -981,7 +982,7 @@ with a focus on accuracy, integrity, and continuous professional growth.</p>
         <div style="max-width: 600px; margin: 0 auto; text-align: center;">
             <p style="margin-bottom: 2rem; font-size: 1.2rem;">Interested in discussing accounting opportunities or professional collaboration?</p>
             <div class="contact-buttons">
-                <a href="mailto:anupkattel0@gmail.com" class="cta-button">
+                <a href="/cdn-cgi/l/email-protection#54353a21243f352020313864143339353d387a373b39" class="cta-button">
                     <i class="fas fa-envelope"></i> Send Email
                 </a>
                 <a href="https://wa.me/9779825176993" class="whatsapp-button">
@@ -1003,7 +1004,7 @@ with a focus on accuracy, integrity, and continuous professional growth.</p>
         <p style="margin-top: 3rem; opacity: 0.7;">&copy; 2025 Anup Kattel. All rights reserved.</p>
     </footer>
 
-    <script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         // Function to calculate duration between two dates
         function calculateDuration(startDate, endDate) {
             const start = new Date(startDate);
@@ -1043,11 +1044,11 @@ with a focus on accuracy, integrity, and continuous professional growth.</p>
         // Calculate and display durations
         document.addEventListener('DOMContentLoaded', function() {
             // Internship duration
-            const internDuration = calculateDuration('2023-08-01', '2023-12-31');
+            const internDuration = calculateDuration('2024-07-01', '2024-12-31');
             document.getElementById('internDuration').textContent = `Duration: ${internDuration}`;
             
             // Accounts Officer duration
-            const officerDuration = calculateDuration('2024-01-01', 'Present');
+            const officerDuration = calculateDuration('2024-12-01', 'Present');
             document.getElementById('officerDuration').textContent = `Duration: ${officerDuration}`;
         });
 
